--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -56,6 +56,7 @@ main {
   text-decoration: none;
   opacity: 60%;
   transition: all 120ms ease-in;
+  z-index: 2;
 }
 #jump-to-top:hover {
   opacity: 100%;
